<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConnectionLoginActivity">

    <TextView
        android:id="@+id/pseudo"
        android:layout_width="280dp"
        android:layout_height="27dp"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/pseudo"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/oval4"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="92dp" />

    <TextView
        android:id="@+id/myprofile"
        android:layout_width="88dp"
        android:layout_height="27dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/myprofile"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/retour"
        android:layout_width="20dp"
        android:layout_height="28dp"
        android:src="@drawable/retour"
        tools:layout_editor_absoluteX="101dp"
        tools:layout_editor_absoluteY="39dp" />

    <TextView
        android:id="@+id/localisation"
        android:layout_width="280dp"
        android:layout_height="18dp"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/villeandcountry"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/oval4"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="119dp" />

    <TextView
        android:id="@+id/description"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/desc"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/oval4" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="210dp"
        android:layout_height="20dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/account_exist"
        android:textColor="@color/black"
        android:textSize="14sp"
        tools:ignore="MissingConstraints,SmallSp"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="346dp" />

    <Button
        android:id="@+id/button_connection"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="210dp"
        android:layout_height="35dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/connection"
        android:textColor="@color/orange"
        android:textSize="14sp"
        tools:layout_editor_absoluteX="101dp"
        tools:layout_editor_absoluteY="377dp" />


    <Button
        android:id="@+id/registration"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/orange"
        android:text="@string/editprofile"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:cornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@+id/description"
        tools:layout_editor_absoluteX="45dp" />

    <ImageView
        android:id="@+id/oval4"
        android:layout_width="63dp"
        android:layout_height="90dp"
        android:src="@drawable/oval_blast_off_bronze"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="77dp" />

    <ImageView
        android:id="@+id/character3"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:src="@drawable/character3"
        app:layout_constraintBottom_toBottomOf="@+id/oval4"
        app:layout_constraintEnd_toEndOf="@+id/oval4"
        app:layout_constraintStart_toStartOf="@+id/oval4"
        app:layout_constraintTop_toTopOf="@+id/oval4" />


</androidx.constraintlayout.widget.ConstraintLayout>