<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyProfile">
    <!-- MENU HAUT -->
    <!-- RETOUR -->
    <ImageView
        android:id="@+id/retour"
        android:layout_width="17dp"
        android:layout_height="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="45dp"
        android:src="@drawable/retour"
        app:layout_constraintEnd_toStartOf="@+id/myprofile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- TEXTE "MYPROFILE" -->
    <TextView
        android:id="@+id/myprofile"
        android:layout_width="88dp"
        android:layout_height="27dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/myprofile"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <!-- INFOS UTILISATEURS -->
        <!-- PHOTOS DE PROFILE -->
    <ImageView
        android:id="@+id/oval4"
        android:layout_width="63dp"
        android:layout_height="90dp"
        android:src="@drawable/oval_blast_off_bronze"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="77dp" />
        <!-- PSEUDO -->
    <TextView
        android:id="@+id/pseudo"
        android:layout_width="280dp"
        android:layout_height="27dp"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/pseudo"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/oval4"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="92dp" />
        <!-- LOCALISATION -->
    <TextView
        android:id="@+id/localisation"
        android:layout_width="280dp"
        android:layout_height="18dp"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/villeandcountry"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/oval4"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="119dp" />
        <!-- DESCRIPTION -->
    <TextView
        android:id="@+id/description"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/desc"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/oval4" />

    <!-- EDIT PROFILE -->
        <!-- PICTOGRAMME SETTINGS -->
    <ImageView
        android:id="@+id/setting"
        android:layout_width="21dp"
        android:layout_height="18dp"
        android:layout_marginTop="97dp"
        android:layout_marginEnd="30dp"
        android:src="@drawable/setting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <!-- BUTTON SETTINGS -->
    <Button
        android:id="@+id/registration"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/orange"
        android:text="@string/editprofile"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:cornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@+id/description"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="45dp" />

    <!-- INFO FOLLOWERS/FOLLOWING/POSTS -->
        <!-- FOLLOWING -->
    <TextView
        android:id="@+id/nbFollowing"
        android:layout_width="46dp"
        android:layout_height="22dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/nbFollowing"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/registration"
        tools:ignore="MissingConstraints,SmallSp"
        tools:layout_editor_absoluteX="182dp" />
    <TextView
        android:id="@+id/following"
        android:layout_width="73dp"
        android:layout_height="21dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/Following"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/nbFollowing"
        tools:ignore="MissingConstraints,SmallSp"
        tools:layout_editor_absoluteX="169dp" />
        <!-- DIVIDER -->
    <ImageView
        android:id="@+id/line"
        android:layout_width="38dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ligne"
        app:layout_constraintEnd_toStartOf="@+id/followers"
        app:layout_constraintStart_toEndOf="@+id/following"
        app:layout_constraintTop_toBottomOf="@+id/registration" />
        <!-- POSTS -->
    <TextView
        android:id="@+id/post"
        android:layout_width="46dp"
        android:layout_height="22dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/post"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/following"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nbPost"
        tools:ignore="MissingConstraints,SmallSp" />
    <TextView
        android:id="@+id/nbPost"
        android:layout_width="46dp"
        android:layout_height="22dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/nbPost"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintTop_toTopOf="@+id/nbFollowing"
        tools:ignore="MissingConstraints,SmallSp"
        tools:layout_editor_absoluteX="63dp" />
        <!-- DIVIDER -->
    <ImageView
        android:id="@+id/line2"
        android:layout_width="38dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ligne"
        app:layout_constraintEnd_toStartOf="@+id/following"
        app:layout_constraintStart_toEndOf="@+id/post"
        app:layout_constraintTop_toBottomOf="@+id/registration" />
        <!-- FOLLOWERS -->
    <TextView
        android:id="@+id/nbFollowers"
        android:layout_width="46dp"
        android:layout_height="22dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/nbFollowers"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintTop_toTopOf="@+id/nbFollowing"
        tools:ignore="MissingConstraints,SmallSp"
        tools:layout_editor_absoluteX="299dp" />
    <TextView
        android:id="@+id/followers"
        android:layout_width="76dp"
        android:layout_height="22dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/Followers"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.453"
        app:layout_constraintStart_toEndOf="@+id/following"
        app:layout_constraintTop_toBottomOf="@+id/nbFollowers"
        tools:ignore="MissingConstraints,SmallSp" />

    <!-- TIMELINE POSTS -->
        <!-- TEXTE "POSTS" -->
    <TextView
        android:id="@+id/postfix"
        android:layout_width="344dp"
        android:layout_height="28dp"
        android:layout_marginTop="65dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/post"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registration"
        tools:ignore="MissingConstraints" />

    <!-- MENU BAS -->
        <!-- FOND -->
    <ImageView
        android:id="@+id/menu"
        android:layout_width="417dp"
        android:layout_height="240dp"
        android:layout_marginBottom="-83dp"
        android:src="@drawable/union"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints" />
        <!-- HOME -->
    <ImageView
        android:id="@+id/home"
        android:layout_width="46dp"
        android:layout_height="38dp"
        android:layout_marginBottom="18dp"
        android:src="@drawable/home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/notification"
        app:layout_constraintStart_toStartOf="@+id/menu" />
        <!-- NOTIF -->
    <ImageView
        android:id="@+id/notification"
        android:layout_width="46dp"
        android:layout_height="38dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="18dp"
        android:src="@drawable/notification"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/newpost" />
        <!-- NEW POSTS -->
    <ImageView
        android:id="@+id/newpost"
        android:layout_width="46dp"
        android:layout_height="38dp"
        android:layout_marginBottom="18dp"
        android:src="@drawable/newpost"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
        <!-- CHATS -->
    <ImageView
        android:id="@+id/chat"
        android:layout_width="46dp"
        android:layout_height="38dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="18dp"
        android:src="@drawable/chat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/newpost" />
        <!-- PROFILE -->
    <ImageView
        android:id="@+id/profile"
        android:layout_width="46dp"
        android:layout_height="38dp"
        android:layout_marginBottom="18dp"
        android:src="@drawable/profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/chat" />


</androidx.constraintlayout.widget.ConstraintLayout>